--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "nltk>=3.9.1",
     "numpy>=2.3.2",
     "pandas>=2.3.2",
+    "pip>=25.2",
     "scikit-learn>=1.7.1",
     "seaborn>=0.13.2",
     "statsmodels>=0.14.5",
