--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "matplotlib>=3.10.6",
     "nltk>=3.9.1",
     "numpy>=2.3.2",
+    "openpyxl>=3.1.5",
     "pandas>=2.3.2",
     "pip>=25.2",
     "scikit-learn>=1.7.1",
